--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr">
+<html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr" lang="en">
 <head>
-	<title>Untitled</title>
+	<title>Hi/Max Real Estate</title>
 	<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/i18n/en.min.js"></script>
 	<script
 		src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/deps/jsonpointer.min.js"></script>
@@ -17,18 +17,53 @@
 	<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/cdtsapps.css">
 
 	<style>
+	table {
+		border-collapse: collapse;
+		width: 70%;
+		margin: 50px auto;
+		text-align: center;
+		border: 1px solid #ccc;
+	}
+	th, td {
+		border: 1px solid #999;
+		padding: 10px 14px;
+	}
+	thead tr:first-child th {
+		background-color: #333;
+		color: white;
+		font-size: 1.1em;
+	}
+	thead tr:nth-child(2) th {
+		background-color: #999;
+		color: black;
+	}
+	tbody th {
+		background-color: #555;
+		color: white;
+		font-weight: bold;
+	}
+	tbody td {
+		background-color: white;
+		color: black;
+	}
 
- .social  a svg {
-      width: 30px;
-      fill: #91929a;
-    }
+	.social  a svg {
+		width: 30px;
+		fill: #91929a;
+		}
+
+	img {
+		display:block;
+		margin: 10px auto;
+	}
+
 	</style>
 </head>
 
 <body>
 
 	</div>
-	<div> <!-- start of header-->
+	<header><!-- start of header-->
 
 				<div class="app-bar">
 			<div class="container">
@@ -42,7 +77,7 @@
 		</div>
 
 
-		<div id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
+		<nav id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
 			class="wb-menu visible-md visible-lg wb-init wb-data-ajax-replace-inited wb-menu-inited wb-navcurr-inited"
 			typeof="SiteNavigationElement">
 			<div class="pnl-strt container nvbar">
@@ -64,38 +99,84 @@
 			</div>
 
 
-		</div> <!-- end of main navigation-->
+		</nav> <!-- end of main navigation-->
 
-	</div> <!-- end of header-->
+	</header> <!-- end of header-->
 
 	<main property="mainContentOfPage" class="container">
-		<h1>Welcome</h1>
-		<p>Content A here</p>
+		<h1>Hi/Max Real Estate & Houses </h1>
+		<p>Buying or selling a home is likely the largest and most important transaction you’ll ever make. That’s why so many trust Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada six times in a row.</p>
+		<a href="#">Lets get started</a>
 		<div class="row">
-			<div class="col-md-4 pull-right">
-				<p></p>Content B here
-			</div>
-			<div class="col-md-8">
-				<p>Content C here</p>
-
-
-			</div>
+			<aside class="col-md-4 pull-right">
+				<h2>Related Resources</h2>
+				<p>It's time to sell and find the next "one". Let us help you navigate the ins & outs of your next move.</p>
+				<ul>
+					<li><a href="#">Looking for an upgrade?</a></li>
+					<li><a href="#">Buying tips</a></li>
+					<li><a href="#">How much is your current home worth?</a></li>
+				</ul>
+			</aside>
+			<section class="col-md-8">
+				<h2>Why choosing HI/Max</h2>
+				<p>Hi/Max agents go above and beyond and always strive to be the best they can be. HI/MAX is extremely community focused, and our agents are too!</p>
+				<h3>Stats of HI/Max</h3>
+				<table role="table" aria-label="Property Sales by Province and Type">
+				<thead>
+					<tr>
+					<th scope="col" rowspan="2">Year</th>
+					<th scope="colgroup" colspan="2">Sold Properties</th>
+					<th scope="colgroup" colspan="2">Average Selling Price</th>
+					</tr>
+					<tr>
+					<th scope="col">Quebec</th>
+					<th scope="col">Ontario</th>
+					<th scope="col">Single House</th>
+					<th scope="col">Condo</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+					<th scope="row">2021</th>
+					<td>50</td>
+					<td>100</td>
+					<td>$500,00</td>
+					<td>189,000</td>
+					</tr>
+					<tr>
+					<th scope="row">2022</th>
+					<td>100</td>
+					<td>200</td>
+					<td>$780,00</td>
+					<td>240,000</td>
+					</tr>
+				</tbody>
+				</table>
+			</section>
 		</div>
-		<div class="clear"></div>
-		<div>Content D here</div>
-		<div class="row">
-			<div class="col-md-4 ">
-				<p>Content F here</p>
-			</div>
-			<div class="col-md-4">
-				<p>Content G here</p>
+		<section class="clear">
+		<h3>More Resources on How to Choose the Right Agent</h3>
+		</section>
+		<section class="row">
+			<article class="col-md-4 ">
+				<img src="1.png" alt="A red birdhouse with a FOR SALE sign hangs from a tree branch.">
+				<a href="#">What Are The Risks of Selling a Home Yourself?</a>
+				<p>We’ve all seen the videos, read the stories, and gasped at the images of people who thought they could conquer a project that would have been better left to the professionals. 
+					Read more</p>
+			</article>
+			<article class="col-md-4">
+				<img src="2.png" alt="The image of the man in a blue blazer smiling while talking to another person in an office setting">
+				<a href="#">7 Questions to Ask a Real Estate Agent Before You Commit</a>
+				<p>According to research by the National Association of Realtors, there are considerable benefits to working with a real estate agent, including higher sale prices. </p>
 
-			</div>
-			<div class="col-md-4">
-				<p>Content H here</p>
+			</article>
+			<article class="col-md-4">
+				<img src="3.png" alt="A real estate agent in a suit is posting a FOR SALE sign with his name, Pete Crowe, in front of a house.">
+				<a href="#">8 Reasons to Hire an Agent When Selling Your Home</a>
+				<p>With all the many different moving parts involved in selling your home, here are eight very valid reasons to have a real estate agent on speed dial.</p>
 
-			</div>
-		</div>
+			</article>
+		</section>
 		<div class="pagedetails">
 			<dl id="wb-dtmd">
 				<dt>Date modified: </dt>
@@ -105,7 +186,7 @@
 
 
 	</main>
-	<div id="wb-info" class=" wb-navcurr-inited">
+	<footer id="wb-info" class=" wb-navcurr-inited">
 		<div class="gc-sub-footer">
 			<div class="container d-flex align-items-center">
 				<div>
@@ -115,7 +196,8 @@
 						<li><a href="#">Privacy policy</a></li>
 						<li><a href="#">Accessibility statement</a></li>
 						<li style="list-style: none;" class="social">
-						<a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+						<a href="#"><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+						  <title>Connect on our Twitter page.</title>
 						  <path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"></path>
 						</svg></a></li>
 						
@@ -128,7 +210,7 @@
 
 			</div>
 		</div>
-	</div> <!-- end of footer-->
+	</footer> <!-- end of footer-->
 
 	<script>
 		var defFooter = document.getElementById("def-footer");
