--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
 
 	</div>
-	<header><!-- start of header-->
+	<header role="banner"><!-- start of header-->
 
 				<div class="app-bar">
 			<div class="container">
@@ -84,15 +84,15 @@
 				<h2>Topics menu</h2>
 				<div class="row">
 					<ul role="menubar" class="list-inline menu">
-						<li><a class="item" href="index-en.html" tabindex="0" aria-posinset="1" aria-setsize="7"
+						<li><a class="item" href="index-en.html" tabindex="1" aria-posinset="1" aria-setsize="5"
 								role="menuitem">Home</a></li>
-						<li><a class="item" href="internet-en.html" tabindex="-1" aria-posinset="2" aria-setsize="7"
+						<li><a class="item" href="internet-en.html" tabindex="2" aria-posinset="2" aria-setsize="5"
 								role="menuitem">Buying</a></li>
-						<li><a class="item" href="intranet-en.html" tabindex="-1" aria-posinset="3" aria-setsize="7"
+						<li><a class="item" href="intranet-en.html" tabindex="3" aria-posinset="3" aria-setsize="5"
 								role="menuitem">Selling</a></li>
-						<li><a class="item" href="faq-en.html" tabindex="-1" aria-posinset="6" aria-setsize="7"
+						<li><a class="item" href="faq-en.html" tabindex="4" aria-posinset="4" aria-setsize="5"
 								role="menuitem">FAQs</a></li>
-						<li><a class="item" href="contact-en.html" tabindex="-1" aria-posinset="7" aria-setsize="7"
+						<li><a class="item" href="contact-en.html" tabindex="5" aria-posinset="5" aria-setsize=""
 								role="menuitem">Contact us</a></li>
 					</ul>
 				</div>
@@ -103,7 +103,7 @@
 
 	</header> <!-- end of header-->
 
-	<main property="mainContentOfPage" class="container">
+	<main role="main" property="mainContentOfPage" class="container">
 		<h1>Hi/Max Real Estate & Houses </h1>
 		<p>Buying or selling a home is likely the largest and most important transaction you’ll ever make. That’s why so many trust Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada six times in a row.</p>
 		<a href="#">Lets get started</a>
@@ -129,7 +129,7 @@
 					<th scope="colgroup" colspan="2">Average Selling Price</th>
 					</tr>
 					<tr>
-					<th scope="col">Quebec</th>
+					<th scope="col" lang="fr">Québec</th>
 					<th scope="col">Ontario</th>
 					<th scope="col">Single House</th>
 					<th scope="col">Condo</th>
@@ -186,7 +186,7 @@
 
 
 	</main>
-	<footer id="wb-info" class=" wb-navcurr-inited">
+	<footer role="contentinfo" id="wb-info" class=" wb-navcurr-inited">
 		<div class="gc-sub-footer">
 			<div class="container d-flex align-items-center">
 				<div>
